Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1075,11 +1075,32 @@
           "source_hidden": false
         },
         "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "4948e102-974c-4bcc-9168-1f5e66838042"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T21:53:11.027830+00:00",
+          "start_time": "2023-07-18T21:53:10.746716+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df['python']=unclean_df['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df['excel']=unclean_df['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df['Sql']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df['tableau']=unclean_df['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df['Sparx']=unclean_df['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df['machine learing']=unclean_df['Job Description'].apply(lambda x: 1 if \"mechine learing\" in x.lower() else 0)\nunclean_df['aws']=unclean_df['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
+      "outputs": []
+    },
+    {
+      "id": "ee5f97c6-f668-48f3-aa80-36df31b317cc",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
           "cell_type": "code"
         }
       },
       "execution_count": null,
-      "source": "uncleaned_data['python']=uncleaned_data['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nuncleaned_data['excel']=uncleaned_data['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nuncleaned_data['Sql']=uncleaned_data['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nuncleaned_data['tableau']=uncleaned_data['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nuncleaned_data['Sparx']=uncleaned_data['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nuncleaned_data['machine learing']=uncleaned_data['Job Description'].apply(lambda x: 1 if \"mechine learing\" in x.lower() else 0)\nuncleaned_data['aws']=uncleaned_data['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
+      "source": "unclean_df",
       "outputs": []
     }
   ],
@@ -1103,7 +1124,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "883455c5-d101-4392-9132-acbb943f8248"
+      "last_transaction_id": "3d413284-2261-4439-b3e5-c2f4adf6ad1a"
     }
   },
   "nbformat": 4,
