--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1096,7 +1096,60 @@
           "source_hidden": false
         },
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "f2ca2e70-4a01-4d12-9c64-810475e277d9"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T21:53:23.334817+00:00",
+          "start_time": "2023-07-18T21:53:22.984016+00:00"
+        },
+        "datalink": {
+          "14ce3902-4787-4527-b196-1d667eecf7db": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 25,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 137072,
+              "truncated_num_cols": 25,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 137072,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "14ce3902-4787-4527-b196-1d667eecf7db",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T21:53:23.147437",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
         }
       },
       "execution_count": null,
@@ -1124,7 +1177,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "3d413284-2261-4439-b3e5-c2f4adf6ad1a"
+      "last_transaction_id": "7baea9fc-f86b-48c1-abb5-ad720afffd72"
     }
   },
   "nbformat": 4,
