--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1067,6 +1067,16 @@
       "outputs": []
     },
     {
+      "id": "99ca18e4-5985-4996-95f6-6b36cd997dd7",
+      "cell_type": "markdown",
+      "source": "",
+      "metadata": {
+        "noteable": {
+          "cell_type": "markdown"
+        }
+      }
+    },
+    {
       "id": "fa9c64d9-d61f-4c43-b701-799fff4822b6",
       "cell_type": "code",
       "metadata": {
@@ -1177,7 +1187,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "7baea9fc-f86b-48c1-abb5-ad720afffd72"
+      "last_transaction_id": "8c09d9f3-6f5d-4ec7-b246-1c9580a97158"
     }
   },
   "nbformat": 4,
