Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1094,7 +1094,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df['Python']=unclean_df['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df['Excel']=unclean_df['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df['SQL']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df['Tableau']=unclean_df['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df['Sparx']=unclean_df['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df['Machine Learing']=unclean_df['Job Description'].apply(lambda x: 1 if \"mechine learing\" in x.lower() else 0)\nunclean_df['AWS']=unclean_df['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
+      "source": "unclean_df['Python']=unclean_df['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df['Excel']=unclean_df['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df['SQL']=unclean_df['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df['Tableau']=unclean_df['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df['Sparx']=unclean_df['Job Description'].apply(lambda x: 1 if \"Sparx\" in x.lower() else 0)\nunclean_df['Machine Learing']=unclean_df['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df['AWS']=unclean_df['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
       "outputs": []
     },
     {
@@ -1160,6 +1160,132 @@
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
+        },
+        "dx": {
+          "dashboard": {
+            "multiViews": []
+          },
+          "fieldMetadata": {
+            "Company Name": {
+              "columnPosition": 6
+            },
+            "Competitors": {
+              "columnPosition": 15
+            },
+            "Founded": {
+              "columnPosition": 10
+            },
+            "Headquarters": {
+              "columnPosition": 8
+            },
+            "Industry": {
+              "columnPosition": 12
+            },
+            "Job Description": {
+              "columnPosition": 4
+            },
+            "Job Title": {
+              "columnPosition": 2
+            },
+            "Location": {
+              "columnPosition": 7
+            },
+            "Rating": {
+              "columnPosition": 5
+            },
+            "Revenue": {
+              "columnPosition": 14
+            },
+            "Salary Estimate": {
+              "columnPosition": 3
+            },
+            "Sector": {
+              "columnPosition": 13
+            },
+            "Size": {
+              "columnPosition": 9
+            },
+            "Sparx": {
+              "columnPosition": 23
+            },
+            "Sql": {
+              "columnPosition": 21
+            },
+            "Type of ownership": {
+              "columnPosition": 11
+            },
+            "avg_salary": {
+              "columnPosition": 18
+            },
+            "aws": {
+              "columnPosition": 25
+            },
+            "excel": {
+              "columnPosition": 20
+            },
+            "index": {
+              "columnPosition": 1
+            },
+            "machine learing": {
+              "columnPosition": 24
+            },
+            "max_salary": {
+              "columnPosition": 17
+            },
+            "min_salary": {
+              "columnPosition": 16
+            },
+            "python": {
+              "columnPosition": 19
+            },
+            "tableau": {
+              "columnPosition": 22
+            }
+          },
+          "updated": 1689717755941,
+          "views": [
+            {
+              "annotationRules": [],
+              "chart": {},
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "first-view",
+              "isDefault": true,
+              "type": "public",
+              "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {},
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "first-view",
+              "isDefault": true,
+              "isTransitory": true,
+              "type": "public",
+              "userID": ""
+            }
+          ]
         }
       },
       "execution_count": null,
@@ -1187,7 +1313,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "e38a6be8-baca-4d66-9a5e-d930a3acfd67"
+      "last_transaction_id": "8c0674bc-1938-4fdd-b9ea-53ba49baea7f"
     }
   },
   "nbformat": 4,
