--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -236,7 +236,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "4fd4f444-079e-4498-94de-fc794e598420"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:49:21.474893+00:00",
@@ -1313,7 +1313,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "8c0674bc-1938-4fdd-b9ea-53ba49baea7f"
+      "last_transaction_id": "ab46bd3c-ca9d-4417-92a3-fbc1cb46d6b4"
     }
   },
   "nbformat": 4,
