Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "b48b8796-0103-4e0a-bb93-b1faccb0c452"
+          "output_collection_id": "6b5e15df-977f-4344-94f3-832400e7d466"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:15.618729+00:00",
-          "start_time": "2023-07-18T22:05:15.461630+00:00"
+          "end_time": "2023-07-18T23:09:32.860710+00:00",
+          "start_time": "2023-07-18T23:09:32.703445+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": "ca09deb6-8e7a-4d63-8674-cc6c1c781dc0"
+          "output_collection_id": "49e1e7bc-fb52-4623-b47d-56ef99fe4266"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:15.924091+00:00",
-          "start_time": "2023-07-18T22:05:15.632411+00:00"
+          "end_time": "2023-07-18T23:09:33.218290+00:00",
+          "start_time": "2023-07-18T23:09:32.914815+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -309,6 +309,52 @@
             "sampling_time": "2023-07-18T22:05:15.765266",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_7e85084f899a4c739f837aba35bdd0e8"
+          },
+          "947d36c3-749c-45c7-9eef-831b1744e4fb": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "947d36c3-749c-45c7-9eef-831b1744e4fb",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T23:09:33.055440",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_d0e339f3df6c49118606835ea171e2bf"
           }
         },
         "dx": {
@@ -328,11 +374,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3632d3d6-ab44-433f-9d7e-52a6dbc41fd9"
+          "output_collection_id": "d739f88b-50bd-44e8-ba1f-20d0340d71da"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:16.133503+00:00",
-          "start_time": "2023-07-18T22:05:15.935151+00:00"
+          "end_time": "2023-07-18T23:09:33.438833+00:00",
+          "start_time": "2023-07-18T23:09:33.227942+00:00"
         }
       },
       "execution_count": null,
@@ -349,11 +395,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "e40631f8-ebca-42dc-8e28-84a1cfe01810"
+          "output_collection_id": "88d7285a-76ea-470d-b325-6a4250375d1b"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:16.363524+00:00",
-          "start_time": "2023-07-18T22:05:16.160826+00:00"
+          "end_time": "2023-07-18T23:09:33.644747+00:00",
+          "start_time": "2023-07-18T23:09:33.449198+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -663,6 +709,50 @@
             "sampling_time": "2023-07-18T22:05:16.205912",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_0386c4d8349540c8b9304c2bab5eb9b0"
+          },
+          "1c9aa8d3-24e0-4a78-9e46-dcf3f3789482": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "1c9aa8d3-24e0-4a78-9e46-dcf3f3789482",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T23:09:33.488263",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_31ef0728c72b4d688aa6f9ff4215084d"
           }
         },
         "dx": {
@@ -687,11 +777,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "8d827fee-815f-4133-8c1f-4e590dfb925a"
+          "output_collection_id": "50c57c96-63c2-4bda-879e-0010dc801e2a"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:16.688885+00:00",
-          "start_time": "2023-07-18T22:05:16.528123+00:00"
+          "end_time": "2023-07-18T23:09:33.874723+00:00",
+          "start_time": "2023-07-18T23:09:33.710774+00:00"
         }
       },
       "execution_count": null,
@@ -704,11 +794,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5f7b9370-8fcc-40d6-b9d8-9e255354f6cb"
+          "output_collection_id": "bc5bbb63-89aa-42a2-9eb7-d1d31a40a657"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:17.006036+00:00",
-          "start_time": "2023-07-18T22:05:16.715466+00:00"
+          "end_time": "2023-07-18T23:09:34.166999+00:00",
+          "start_time": "2023-07-18T23:09:33.884281+00:00"
         },
         "datalink": {
           "ee42736d-9639-42ca-8138-80ed5129674c": {
@@ -940,6 +1030,52 @@
             "sampling_time": "2023-07-18T22:05:16.845091",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_2e470bfb0199431fbc7898de14df79fd"
+          },
+          "a1462217-eb6e-4490-af56-b2ebe3661142": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "a1462217-eb6e-4490-af56-b2ebe3661142",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T23:09:34.004843",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_9013d3e746ab48f68df94a491e719203"
           }
         }
       },
@@ -957,11 +1093,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "898ee566-67c4-4037-9354-88d373ce14c1"
+          "output_collection_id": "b3af184d-787e-44f6-8717-03807f90465a"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:17.259578+00:00",
-          "start_time": "2023-07-18T22:05:17.094456+00:00"
+          "end_time": "2023-07-18T23:09:34.341641+00:00",
+          "start_time": "2023-07-18T23:09:34.176683+00:00"
         }
       },
       "execution_count": null,
@@ -978,11 +1114,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "b53bf50f-840a-47d8-88d5-129b3095532b"
+          "output_collection_id": "c8f617b8-29a9-4a4a-b26a-49ab1360ec16"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:17.428169+00:00",
-          "start_time": "2023-07-18T22:05:17.269129+00:00"
+          "end_time": "2023-07-18T23:09:34.510704+00:00",
+          "start_time": "2023-07-18T23:09:34.351130+00:00"
         }
       },
       "execution_count": null,
@@ -999,12 +1135,9 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "91960d66-0daa-4fde-9572-940ea0b4af2b"
+          "output_collection_id": "0f85b49d-3709-42f6-90c6-409eaada94d9"
         },
-        "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:17.598167+00:00",
-          "start_time": "2023-07-18T22:05:17.438839+00:00"
-        }
+        "ExecuteTime": null
       },
       "execution_count": null,
       "source": "unclean_df.reset_index(inplace=True)\nunclean_df.shape",
@@ -1020,7 +1153,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d8694928-c34c-43a9-a5ff-4227d4533a4d"
+          "output_collection_id": "8ffa00e2-0bb7-414a-b900-6e6a3afc07dc"
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T22:05:17.938899+00:00",
@@ -1233,7 +1366,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "20c187aa-9950-41b2-be4f-b0f4583230c8"
+          "output_collection_id": "9ce75f2b-5ab5-4672-960b-3ed5a264bd08"
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T22:05:18.595926+00:00",
@@ -1260,7 +1393,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "f5e3de34-b226-4462-9d0b-fa31d3f3480c"
+          "output_collection_id": "b88025f8-ae98-4011-be99-3e604c534736"
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T22:05:18.816562+00:00",
@@ -1411,7 +1544,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a8f33cb9-2af1-4256-a742-b1fcc59cd1f3"
+          "output_collection_id": "c3393c45-be0e-4bf0-9949-8eb69e052e68"
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T22:05:19.634576+00:00",
@@ -1432,7 +1565,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "1f112855-8e13-4fe3-9481-4368c727c2de"
+          "output_collection_id": "c7c248d6-af60-4196-86d3-f7ffdcab6919"
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T22:05:19.987104+00:00",
@@ -1599,7 +1732,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "d07b569d-1df6-47d6-a320-179db349ef27"
+          "output_collection_id": "7e0f9c94-6a42-4608-b1bc-e5eb4c414f7e"
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T22:05:20.155755+00:00",
@@ -1630,7 +1763,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "f2fd6d2f-27b2-4026-b107-3b447991a06c"
+          "output_collection_id": "6b8a17a7-d6e7-49bf-bfc2-989c682f17e9"
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T22:05:20.454272+00:00",
@@ -1651,7 +1784,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "c301bc8e-e9c3-42fb-a79a-5bee3bd1f450"
+          "output_collection_id": "6a12bd13-63d4-49ad-a175-9c00474ce0ed"
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T22:05:20.843690+00:00",
@@ -1878,7 +2011,7 @@
               "columnPosition": 16
             }
           },
-          "updated": 1689718027275,
+          "updated": 1689721662698,
           "views": [
             {
               "annotationRules": [],
@@ -1949,7 +2082,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "e9a112c6-4114-4daf-8394-c10a2880d563"
+      "last_transaction_id": "bff39176-be6b-4fc0-ac84-237a5aa92c9e"
     }
   },
   "nbformat": 4,
