--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1135,9 +1135,12 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0f85b49d-3709-42f6-90c6-409eaada94d9"
+          "output_collection_id": "77ea3f9a-3434-431b-9510-5fbef49d9de4"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-07-18T23:09:34.680134+00:00",
+          "start_time": "2023-07-18T23:09:34.520713+00:00"
+        }
       },
       "execution_count": null,
       "source": "unclean_df.reset_index(inplace=True)\nunclean_df.shape",
@@ -1153,11 +1156,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "8ffa00e2-0bb7-414a-b900-6e6a3afc07dc"
+          "output_collection_id": "8104e82d-0a79-4fc0-8760-9d9de95ab054"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:17.938899+00:00",
-          "start_time": "2023-07-18T22:05:17.607675+00:00"
+          "end_time": "2023-07-18T23:09:37.272870+00:00",
+          "start_time": "2023-07-18T23:09:36.927270+00:00"
         },
         "datalink": {
           "b2ef382d-0457-4d28-a610-e94443bf5384": {
@@ -1343,6 +1346,52 @@
             "sampling_time": "2023-07-18T22:05:17.750656",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "cc1c47b1-db58-4212-b68b-8d58a04b2f6a": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 84352,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 84352,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "cc1c47b1-db58-4212-b68b-8d58a04b2f6a",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T23:09:37.083878",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         }
       },
@@ -1369,8 +1418,8 @@
           "output_collection_id": "9ce75f2b-5ab5-4672-960b-3ed5a264bd08"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:18.595926+00:00",
-          "start_time": "2023-07-18T22:05:18.436334+00:00"
+          "end_time": "2023-07-18T23:09:38.029045+00:00",
+          "start_time": "2023-07-18T23:09:37.869363+00:00"
         }
       },
       "execution_count": null,
@@ -1393,11 +1442,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "b88025f8-ae98-4011-be99-3e604c534736"
+          "output_collection_id": "e258b099-a166-411e-b8fa-335bfb6728df"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:18.816562+00:00",
-          "start_time": "2023-07-18T22:05:18.606550+00:00"
+          "end_time": "2023-07-18T23:09:38.244849+00:00",
+          "start_time": "2023-07-18T23:09:38.043523+00:00"
         },
         "datalink": {
           "8806e994-1e21-41c4-b843-fb15ac437a3e": {
@@ -1531,6 +1580,50 @@
             "sampling_time": "2023-07-18T22:05:18.659242",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_248d810f382d43439045bd0dbb92a371"
+          },
+          "d48edd9a-4bab-4f44-9042-438ddb7ac373": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 30,
+              "orig_size_bytes": 480,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 30,
+              "truncated_size_bytes": 480,
+              "truncated_string_columns": []
+            },
+            "display_id": "d48edd9a-4bab-4f44-9042-438ddb7ac373",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T23:09:38.087815",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_7c380a68b1a1471ea5d92f84027ad288"
           }
         }
       },
@@ -1547,8 +1640,8 @@
           "output_collection_id": "c3393c45-be0e-4bf0-9949-8eb69e052e68"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:19.634576+00:00",
-          "start_time": "2023-07-18T22:05:18.826959+00:00"
+          "end_time": "2023-07-18T23:09:39.135875+00:00",
+          "start_time": "2023-07-18T23:09:38.326328+00:00"
         }
       },
       "execution_count": null,
@@ -1565,11 +1658,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "c7c248d6-af60-4196-86d3-f7ffdcab6919"
+          "output_collection_id": "70f5a6fa-24ba-4316-a853-db293331e0fd"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:19.987104+00:00",
-          "start_time": "2023-07-18T22:05:19.707757+00:00"
+          "end_time": "2023-07-18T23:09:39.423538+00:00",
+          "start_time": "2023-07-18T23:09:39.145390+00:00"
         },
         "datalink": {
           "e9de32a8-8401-43ea-be26-17007d402087": {
@@ -1709,6 +1802,52 @@
             "sampling_time": "2023-07-18T22:05:19.826096",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_83e08f032c204647b6f5959a008792c4"
+          },
+          "259fcf98-7bd7-4fe8-bc41-a6d7c3089e14": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 18,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 760,
+              "truncated_num_cols": 18,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 760,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "259fcf98-7bd7-4fe8-bc41-a6d7c3089e14",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T23:09:39.262375",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_1c25467387a74f5094fb1854faa8093b"
           }
         }
       },
@@ -1732,11 +1871,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "7e0f9c94-6a42-4608-b1bc-e5eb4c414f7e"
+          "output_collection_id": "eb17575a-185f-49b5-9164-7823b244d214"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:20.155755+00:00",
-          "start_time": "2023-07-18T22:05:19.996482+00:00"
+          "end_time": "2023-07-18T23:09:39.592331+00:00",
+          "start_time": "2023-07-18T23:09:39.433089+00:00"
         }
       },
       "execution_count": null,
@@ -1766,8 +1905,8 @@
           "output_collection_id": "6b8a17a7-d6e7-49bf-bfc2-989c682f17e9"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:20.454272+00:00",
-          "start_time": "2023-07-18T22:05:20.162828+00:00"
+          "end_time": "2023-07-18T23:09:39.890351+00:00",
+          "start_time": "2023-07-18T23:09:39.601164+00:00"
         }
       },
       "execution_count": null,
@@ -1784,11 +1923,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "6a12bd13-63d4-49ad-a175-9c00474ce0ed"
+          "output_collection_id": "87f3f2a7-fd7f-4979-b1c4-cce8d5a679ad"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T22:05:20.843690+00:00",
-          "start_time": "2023-07-18T22:05:20.464238+00:00"
+          "end_time": "2023-07-18T23:09:40.261323+00:00",
+          "start_time": "2023-07-18T23:09:39.899343+00:00"
         },
         "datalink": {
           "14ce3902-4787-4527-b196-1d667eecf7db": {
@@ -1928,6 +2067,52 @@
             "sampling_time": "2023-07-18T22:05:20.654530",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "cb5ee173-0d23-48e4-9868-04b2a52085f4": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 25,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 137072,
+              "truncated_num_cols": 25,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 137072,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "cb5ee173-0d23-48e4-9868-04b2a52085f4",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T23:09:40.066171",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -2011,7 +2196,7 @@
               "columnPosition": 16
             }
           },
-          "updated": 1689721662698,
+          "updated": 1689721940724,
           "views": [
             {
               "annotationRules": [],
@@ -2082,7 +2267,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "bff39176-be6b-4fc0-ac84-237a5aa92c9e"
+      "last_transaction_id": "4aee4577-f979-4710-b71a-f81dd05e846a"
     }
   },
   "nbformat": 4,
