--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2130,6 +2130,7 @@
               "columnPosition": 15
             },
             "Excel": {
+              "aggregation": "SUM",
               "columnPosition": 20
             },
             "Founded": {
@@ -2154,6 +2155,7 @@
               "columnPosition": 24
             },
             "Python": {
+              "aggregation": "SUM",
               "columnPosition": 19
             },
             "Rating": {
@@ -2196,7 +2198,7 @@
               "columnPosition": 16
             }
           },
-          "updated": 1689721940724,
+          "updated": 1689721962110,
           "views": [
             {
               "annotationRules": [],
@@ -2267,7 +2269,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "4aee4577-f979-4710-b71a-f81dd05e846a"
+      "last_transaction_id": "ad68f427-d2e5-4d21-a16b-fbdd7cc00777"
     }
   },
   "nbformat": 4,
