Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2165,6 +2165,7 @@
               "columnPosition": 14
             },
             "SQL": {
+              "aggregation": "SUM",
               "columnPosition": 21
             },
             "Salary Estimate": {
@@ -2198,7 +2199,7 @@
               "columnPosition": 16
             }
           },
-          "updated": 1689721962110,
+          "updated": 1689721977036,
           "views": [
             {
               "annotationRules": [],
@@ -2269,7 +2270,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "ad68f427-d2e5-4d21-a16b-fbdd7cc00777"
+      "last_transaction_id": "bc16bbb8-a00d-44eb-962b-dc59819175d1"
     }
   },
   "nbformat": 4,
