Commit from Noteable
Synced changes with remote storage

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2832,7 +2832,8 @@
               "columnPosition": 16
             }
           },
-          "updated": 1689722044109,
+          "simpleTable": false,
+          "updated": 1689726183410,
           "views": [
             {
               "annotationRules": [],
@@ -2903,7 +2904,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "91a2f235-4e93-40af-8424-b78d41dabc9d"
+      "last_transaction_id": "500a370c-f50d-4e0d-9c3b-cd58446854e8"
     }
   },
   "nbformat": 4,
