--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2337,6 +2337,73 @@
       "outputs": []
     },
     {
+      "id": "e228e788-af69-4b4b-b2b3-c102de916dcd",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "fc39010d-9918-4b0b-9e72-ae4ab2371d7b"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T02:39:25.149839+00:00",
+          "start_time": "2023-07-19T02:39:24.942042+00:00"
+        },
+        "datalink": {
+          "f223c93f-b550-4aa9-aca0-1de0413c833c": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 1,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 10544,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 10544,
+              "truncated_string_columns": []
+            },
+            "display_id": "f223c93f-b550-4aa9-aca0-1de0413c833c",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:39:24.991711",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_6e0d0fc50899463a97a8c209740d424b"
+          }
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df2",
+      "outputs": []
+    },
+    {
       "id": "5827ccf0-2308-42a1-a35b-82cceb6eca3b",
       "cell_type": "markdown",
       "source": "## Convert Salary Estimate Column into Intergers\n- Check values in ('Salary Estimate').column\n- Create new columns (min salary, max salary, avg salary)\n- Remove extra symbols and character in 'Salary Estimate' column",
@@ -3858,7 +3925,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "d83a927f-acf8-4a3d-beab-bd4ff0c16e28"
+      "last_transaction_id": "a5fb2f09-7768-415d-a24b-018f58804d33"
     }
   },
   "nbformat": 4,
