--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1823,7 +1823,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df.reset_index(inplace=True)\nunclean_df.shape",
+      "source": "unclean_df.reset_index(d=True)\nunclean_df.shape",
       "outputs": []
     },
     {
@@ -1836,11 +1836,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "cfc91732-04e1-46e0-94b7-c46796f3feb4"
+          "output_collection_id": "5e1e78a6-07b8-4a41-9cf8-a551f68ed84c"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:14.514585+00:00",
-          "start_time": "2023-07-19T02:37:14.192948+00:00"
+          "end_time": "2023-07-19T02:41:17.487997+00:00",
+          "start_time": "2023-07-19T02:41:17.130806+00:00"
         },
         "datalink": {
           "b2ef382d-0457-4d28-a610-e94443bf5384": {
@@ -2302,7 +2302,59 @@
             "sampling_time": "2023-07-19T02:37:14.327810",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "5129bcb5-f1d0-41d7-b627-55d5b06c74ce": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 25,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 137072,
+              "truncated_num_cols": 25,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 137072,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "5129bcb5-f1d0-41d7-b627-55d5b06c74ce",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:41:17.301811",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
+        },
+        "dx": {
+          "fieldMetadata": {},
+          "simpleTable": true,
+          "updated": 1689734481898,
+          "views": []
         }
       },
       "execution_count": null,
@@ -2334,73 +2386,6 @@
       },
       "execution_count": null,
       "source": "unclean_df2 = unclean_df['Company Name']\nunclean_df2 = unclean_df2.apply(lambda x:x.split(\"\\n\")[0])",
-      "outputs": []
-    },
-    {
-      "id": "e228e788-af69-4b4b-b2b3-c102de916dcd",
-      "cell_type": "code",
-      "metadata": {
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "fc39010d-9918-4b0b-9e72-ae4ab2371d7b"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-07-19T02:39:25.149839+00:00",
-          "start_time": "2023-07-19T02:39:24.942042+00:00"
-        },
-        "datalink": {
-          "f223c93f-b550-4aa9-aca0-1de0413c833c": {
-            "applied_filters": [],
-            "dataframe_info": {
-              "default_index_used": true,
-              "orig_num_cols": 1,
-              "orig_num_rows": 659,
-              "orig_size_bytes": 10544,
-              "truncated_num_cols": 1,
-              "truncated_num_rows": 659,
-              "truncated_size_bytes": 10544,
-              "truncated_string_columns": []
-            },
-            "display_id": "f223c93f-b550-4aa9-aca0-1de0413c833c",
-            "dx_settings": {
-              "ALLOW_NOTEABLE_ATTRS": true,
-              "COLUMN_SAMPLING_METHOD": "outer",
-              "DB_LOCATION": ":memory:",
-              "DEV_MODE": false,
-              "DISPLAY_MAX_COLUMNS": 100,
-              "DISPLAY_MAX_ROWS": 50000,
-              "DISPLAY_MODE": "simple",
-              "ENABLE_ASSIGNMENT": true,
-              "ENABLE_DATALINK": true,
-              "FLATTEN_COLUMN_VALUES": true,
-              "FLATTEN_INDEX_VALUES": false,
-              "GENERATE_DEX_METADATA": false,
-              "HTML_TABLE_SCHEMA": false,
-              "LOG_LEVEL": 30,
-              "MAX_RENDER_SIZE_BYTES": 104857600,
-              "MAX_STRING_LENGTH": 250,
-              "NUM_PAST_SAMPLES_TRACKED": 3,
-              "RANDOM_STATE": 12648430,
-              "RESET_INDEX_VALUES": false,
-              "ROW_SAMPLING_METHOD": "random",
-              "SAMPLING_FACTOR": 0.1,
-              "SAMPLING_METHOD": "random",
-              "STRINGIFY_COLUMN_VALUES": true,
-              "STRINGIFY_INDEX_VALUES": false
-            },
-            "sample_history": [],
-            "sampling_time": "2023-07-19T02:39:24.991711",
-            "user_variable_name": null,
-            "variable_name": "unk_dataframe_6e0d0fc50899463a97a8c209740d424b"
-          }
-        }
-      },
-      "execution_count": null,
-      "source": "unclean_df2",
       "outputs": []
     },
     {
@@ -3925,7 +3910,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "a5fb2f09-7768-415d-a24b-018f58804d33"
+      "last_transaction_id": "543fed2a-04d7-439f-8fee-e9341d668c07"
     }
   },
   "nbformat": 4,
