--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1815,15 +1815,15 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d4bb9f66-fdeb-474e-88fe-bc11222997da"
+          "output_collection_id": "f4cf140b-c5ef-412a-82b0-807528aa9abf"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:14.184038+00:00",
-          "start_time": "2023-07-19T02:37:14.025104+00:00"
+          "end_time": "2023-07-19T02:41:28.616941+00:00",
+          "start_time": "2023-07-19T02:41:28.457687+00:00"
         }
       },
       "execution_count": null,
-      "source": "unclean_df.reset_index(d=True)\nunclean_df.shape",
+      "source": "unclean_df.reset_index(drop=True)\nunclean_df.shape",
       "outputs": []
     },
     {
@@ -1836,11 +1836,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5e1e78a6-07b8-4a41-9cf8-a551f68ed84c"
+          "output_collection_id": "2bb6cd60-c583-426e-8615-886d06e1049d"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:41:17.487997+00:00",
-          "start_time": "2023-07-19T02:41:17.130806+00:00"
+          "end_time": "2023-07-19T02:41:32.209782+00:00",
+          "start_time": "2023-07-19T02:41:31.862316+00:00"
         },
         "datalink": {
           "b2ef382d-0457-4d28-a610-e94443bf5384": {
@@ -2346,6 +2346,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-19T02:41:17.301811",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "75d15cc2-b5f9-414c-a0b4-7dc60d2ac064": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 25,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 137072,
+              "truncated_num_cols": 25,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 137072,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "75d15cc2-b5f9-414c-a0b4-7dc60d2ac064",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:41:32.023828",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -3910,7 +3956,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "543fed2a-04d7-439f-8fee-e9341d668c07"
+      "last_transaction_id": "933d98f5-3cd9-4b98-82ea-7e98c064f3e5"
     }
   },
   "nbformat": 4,
