--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -625,7 +625,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "ad4d3d53-b241-4895-921b-7adcd4f5ffac"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:37:13.162060+00:00",
@@ -3956,7 +3956,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "b6b35342-ce90-4ba9-ac19-9d9b143fae5c"
+      "last_transaction_id": "2e3cb391-3033-4887-b0d2-be0e1369b140"
     }
   },
   "nbformat": 4,
