Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "4cc41c88-1034-498e-82ab-d72ead187620"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:12.077012+00:00",
-          "start_time": "2023-07-19T02:37:11.919944+00:00"
+          "end_time": "2023-07-19T02:42:53.072333+00:00",
+          "start_time": "2023-07-19T02:42:52.916258+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "6456272b-974d-47a4-875b-483569351ce6"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:12.375221+00:00",
-          "start_time": "2023-07-19T02:37:12.084909+00:00"
+          "end_time": "2023-07-19T02:42:57.309213+00:00",
+          "start_time": "2023-07-19T02:42:57.030643+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -585,12 +585,58 @@
             "sampling_time": "2023-07-19T02:37:12.214432",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_b3a0c7b3237d443bafd6926b2b4855f4"
+          },
+          "36927555-9b58-4c6b-8602-2cbeb30d7c8d": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "36927555-9b58-4c6b-8602-2cbeb30d7c8d",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:42:57.149031",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_8c3fb909da064a679f78fc7d4d7b9199"
           }
         },
         "dx": {
           "fieldMetadata": {},
-          "simpleTable": false,
-          "updated": 1689711482932,
+          "simpleTable": true,
+          "updated": 1689734579680,
           "views": []
         },
         "scrolled": false
@@ -604,15 +650,15 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "d27f34e6-eb91-4e6e-aa96-93e7c648754f"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:12.644912+00:00",
-          "start_time": "2023-07-19T02:37:12.450166+00:00"
+          "end_time": "2023-07-19T02:44:08.385642+00:00",
+          "start_time": "2023-07-19T02:44:08.219824+00:00"
         }
       },
       "execution_count": null,
-      "source": "unclean_data = pd.read_csv('Uncleaned_DS_jobs.csv')\nunclean_df = pd.DataFrame(unclean_data)\nunclean_df.head()\nunclean_df.info()",
+      "source": "unclean_df.info()",
       "outputs": []
     },
     {
@@ -3956,7 +4002,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "2e3cb391-3033-4887-b0d2-be0e1369b140"
+      "last_transaction_id": "b37dcd21-cfeb-45ba-a211-3e225c9fdb02"
     }
   },
   "nbformat": 4,
