--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,7 +6,7 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "4cc41c88-1034-498e-82ab-d72ead187620"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:42:53.072333+00:00",
@@ -27,7 +27,7 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": "6456272b-974d-47a4-875b-483569351ce6"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:42:57.309213+00:00",
@@ -650,7 +650,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d27f34e6-eb91-4e6e-aa96-93e7c648754f"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:44:08.385642+00:00",
@@ -4002,7 +4002,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "b37dcd21-cfeb-45ba-a211-3e225c9fdb02"
+      "last_transaction_id": "2c94aef3-25a3-4036-acb5-0ee82c9e4512"
     }
   },
   "nbformat": 4,
