--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "a78689f2-7fad-4f8c-993d-175aaa004da5"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:42:53.072333+00:00",
-          "start_time": "2023-07-19T02:42:52.916258+00:00"
+          "end_time": "2023-07-19T02:45:06.531885+00:00",
+          "start_time": "2023-07-19T02:45:06.375692+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "e24bf12f-6f09-4e17-90a8-8eb493f8a921"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:42:57.309213+00:00",
-          "start_time": "2023-07-19T02:42:57.030643+00:00"
+          "end_time": "2023-07-19T02:45:10.904065+00:00",
+          "start_time": "2023-07-19T02:45:10.629358+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -631,6 +631,52 @@
             "sampling_time": "2023-07-19T02:42:57.149031",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_8c3fb909da064a679f78fc7d4d7b9199"
+          },
+          "6e17861f-75ec-4ba1-99a7-c62f298c5686": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "6e17861f-75ec-4ba1-99a7-c62f298c5686",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:45:10.745119",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_f0bdd60873bc4e548a70a981a36508e4"
           }
         },
         "dx": {
@@ -4002,7 +4048,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "2c94aef3-25a3-4036-acb5-0ee82c9e4512"
+      "last_transaction_id": "56f0ece1-7074-45e6-82ce-49f9c1e3090c"
     }
   },
   "nbformat": 4,
